# Boxing2D

./: CMakeLists.txt  CMakeLists.txt_old  README.md  bazel-2D-Boxing-beta  bazel-2dBoxing  bazel-bin  bazel-out  bazel-testlogs  compile.py  game  install_dep.sh  main.cpp  makefile
Cust_func/: BUILD  header.h  myfuncs.cpp
cmake/: FindSDL2_image.cmake
headers/: BUILD  gamebase.h  init.h  loading.h  loadingscreen.h  menu.h
imgui/: BUILD
include/: CMakeLists.txt  FileManager.h  Game.h  Player.h  ResourceLoader.h  Types.h  WindowManager.h
main/: BUILD  README.md  compile.py  main.cpp  main2.cpp  main_old.cpp
main/assets/: ReadMe.txt
main/settings/: config.json  config.txt
settings/: config.json
source/: CMakeLists.txt  FileManager.cpp  Game.cpp  Player.cpp  ResourceLoader.cpp  Types.cpp  WindowManager.cpp  main.cpp
src/: BUILD  debugmodule.cpp  gamebase.cpp  imgui_draw.cpp  init.cpp  input.cpp  loading.cpp  loadingscreen.cpp  menu.cpp
src/headers/: debugmodule.h  init.h  input.h  player.h
